deploy/k8s/apps/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: myapp
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 8083
      targetPort: 8083
      name: http
    - port: 8082
      targetPort: 8082
      name: actuator
  type: ClusterIP
