deploy/k8s/apps/payment-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service
  namespace: myapp
  labels:
    app: payment-service
spec:
  ingressClassName: traefik
  rules:
    - host: payment.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8083
